tests/machine/x/ocaml/list_assign.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/list_assign.ml", line 21, characters 10-11:
21 |   nums := 3;
               ^
Error: This expression has type int but an expression was expected of type
         int list


Context (around line 21):
  19 | 
  20 | let () =
  21 |   nums := 3;
  22 |   print_endline (__show (List.nth !nums 1));
  23 | 
